# rust-anilist

./: Cargo.toml  README.md
src/: client.rs  errors.rs  lib.rs
src/models/: anime.rs  character.rs  color.rs  cover.rs  date.rs  format.rs  gender.rs  image.rs  language.rs  link.rs  manga.rs  mod.rs  name.rs  notification.rs  occupations.rs  person.rs  relation.rs  score.rs  season.rs  source.rs  status.rs  studio.rs  tag.rs  title.rs  user.rs
src/queries/: get_anime.rs  get_character.rs  get_manga.rs  get_mediasids.rs  get_person.rs  mod.rs  set_progress.rs
