[package]
name = "anilist"
version = "0.0.2"
authors = ["Asthowen<contact@asthowen.fr>"]
edition = "2021"
description = "rust-anilist is a Rust client wrapper for AniList website."
repository = "https://github.com/Asthowen/rust-anilist"
readme = "README.md"
homepage = "https://github.com/Asthowen"

[dependencies]
tokio = { version = "1.28.0", default-features = false, features = ["fs"]}
reqwest = { version = "0.11.17", features = ["json"] }
serde_json = "1.0.99"