[package]
name = "anilist"
version = "0.0.3"
authors = ["Asthowen<contact@asthowen.fr>"]
edition = "2021"
description = "rust-anilist is a Rust client wrapper for AniList website."
repository = "https://github.com/Asthowen/rust-anilist"
readme = "README.md"
homepage = "https://github.com/Asthowen"

[dependencies]
tokio = { version = "1.36.0", default-features = false, features = ["fs"]}
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"