[package]
name = "anilist"
version = "0.0.5"
authors = ["Asthowen<contact@asthowen.fr>"]
edition = "2021"
description = "rust-anilist is a Rust client wrapper for AniList website."
repository = "https://github.com/Asthowen/rust-anilist"
readme = "README.md"
homepage = "https://github.com/Asthowen"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "^1.38", default-features = false, features = ["fs"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"